--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,26 +2,52 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+* {
+  @apply box-border p-0 m-0;
 }
 
+html {
+  font-size: 16px;
+  @apply scroll-smooth font-extralight tracking-wider;
+}
+
+:root {
+  @apply text-default-700 bg-default-50;
+}
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    @apply text-default-100 bg-default-950;
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+@media screen and (max-height: 734px) {
+  #hero {
+    @apply !min-h-screen;
+  }
+}
+@media screen and (max-height: 734px) and (max-width: 1023px) and (orientation: landscape) {
+  #hero {
+    @apply !h-auto;
+  }
+}
+
+::-webkit-scrollbar {
+  width: 1rem;
+}
+::-webkit-scrollbar-track {
+  @apply bg-default-900/50;
+}
+::-webkit-scrollbar-thumb {
+  border-radius: 0.5rem;
+  background: #2d1241;
+  background: -webkit-linear-gradient(to right, #4c216b, #2d1241);
+  background: linear-gradient(to right, #4c216b, #2d1241);
+  background-clip: content-box;
+  border: 4px solid transparent;
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: #4c216b;
+  background: -webkit-linear-gradient(to right, #6b3095, #4c216b);
+  background: linear-gradient(to right, #6b3095, #4c216b);
+  background-clip: content-box;
 }
