--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,13 +11,14 @@ html {
 }
 
 :root {
-  @apply text-default-700 bg-default-50;
+  @apply text-default-100 bg-default-950;
+  /* @apply text-default-700 bg-default-50; */
 }
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     @apply text-default-100 bg-default-950;
   }
-}
+} */
 
 @media screen and (max-height: 734px) {
   #hero {
