--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,7 +20,7 @@ html {
   }
 } */
 
-@media screen and (max-height: 734px) {
+/* @media screen and (max-height: 734px) {
   #hero {
     @apply !min-h-screen;
   }
@@ -29,7 +29,7 @@ html {
   #hero {
     @apply !h-auto;
   }
-}
+} */
 
 /* EXPERIENCES */
 @media screen and (min-width: 640px) {
